--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,8 +14,10 @@
     "bootstrap": "^5.2.3",
     "framer-motion": "^10.12.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.1",
