--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,10 +6,11 @@
     "@chakra-ui/icons": "^2.0.18",
     "@chakra-ui/react": "^2.5.5",
     "@date-io/dayjs": "^2.16.0",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.12.1",
+    "@mui/joy": "^5.0.0-alpha.77",
+    "@mui/material": "^5.12.2",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-date-pickers": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -19,6 +20,7 @@
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.7",
     "framer-motion": "^10.12.2",
+    "kill-port": "^2.0.1",
     "mui": "0.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
