--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,16 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.18",
-    "@chakra-ui/react": "^2.5.5",
+    "@chakra-ui/icons": "^2.0.19",
+    "@chakra-ui/react": "^2.6.0",
     "@date-io/dayjs": "^2.16.0",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
+    "@material-ui/core": "^4.12.4",
+    "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.11.16",
     "@mui/joy": "^5.0.0-alpha.77",
     "@mui/material": "^5.12.2",
     "@mui/styled-engine-sc": "^5.12.0",
-    "@mui/x-date-pickers": "^6.2.1",
+    "@mui/styles": "^5.12.0",
+    "@mui/x-date-pickers": "^6.3.0",
+    "@nextui-org/react": "^1.0.0-beta.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,8 +24,8 @@
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.7",
     "framer-motion": "^10.12.2",
+    "kill": "^0.0.2",
     "kill-port": "^2.0.1",
-    "mui": "0.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-date-picker": "^5.1.0",
@@ -31,6 +35,7 @@
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.1",
+    "semantic-ui-react": "^2.1.4",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
   },
