--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
     "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.6.0",
+    "@date-io/date-fns": "^2.16.0",
     "@date-io/dayjs": "^2.16.0",
+    "@emotion/core": "^10.1.1",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "@material-ui/core": "^4.12.4",
