--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "my-app",
   "version": "0.1.0",
@@ -18,6 +17,7 @@
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.7",
+    "firebase": "^9.21.0",
     "framer-motion": "^10.12.2",
     "kill": "^0.0.2",
     "kill-port": "^2.0.1",
