--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^10.12.2",
     "kill": "^0.0.2",
     "kill-port": "^2.0.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-date-picker": "^5.1.0",
