--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
     "firebase": "^9.21.0",
     "framer-motion": "^10.12.2",
     "kill": "^0.0.2",
