--- a/my-app/package.json
+++ b/my-app/package.json
@@ -19,7 +19,7 @@
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "firebase": "^9.21.0",
-    "framer-motion": "^10.12.2",
+    "framer-motion": "^10.12.10",
     "kill": "^0.0.2",
     "kill-port": "^2.0.1",
     "moment": "^2.29.4",
@@ -29,6 +29,7 @@
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-native-animatable": "^1.3.3",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.1",
