--- a/my-app/package.json
+++ b/my-app/package.json
@@ -43,6 +43,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3005",
   "eslintConfig": {
     "extends": [
       "react-app",
